@@ -40,6 +40,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- ------  --------------
+2008-03-04 DP  1.8.3  Properly quote the maintenance database name when
+                      creating a new connection.
 2008-03-04 DP  1.8.3  Show the schema correctly for EDB public synonyms that
                       point to other synonyms.
 2008-03-04 DP  1.8.3  Remove long-dead Explain Text option from the Query Tool.
